WIP: fix MatchRepositoryTest, EntityMapper, CRUD Methods, rename game title to name
issue #27