@@ -13,6 +13,7 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class EntityMapper {
@@ -65,30 +66,29 @@ public class EntityMapper {
   }
 
   public MatchEntity matchModelToMatchEntity(Match match) {
-    return new MatchEntity(gameModelToGameEntity(match.getGame()),
-        match.getUsers().stream().map(this::UserModelToUserEntity).toList());
+    List<UserEntity> users = new ArrayList<>();
+    match.getUsers().forEach(user -> users.add(
+        new UserEntity(user.getId(), user.getFirstname(), user.getLastname(),
+            user.isDeactivated())));
+
+    return new MatchEntity(gameModelToGameEntity(match.getGame()), users);
   }
 
   public MatchEntity matchModelToMatchEntityWithReference(Match match, MatchEntity matchEntity) {
-    if (match == null && match == null) {
-      return null;
-    }
 
-    List<UserEntity> users = new ArrayList<>();
-
-    if (match.getId() != null) {
-      match.setId(match.getId());
-    }
-
-    matchEntity.setGame(gameModelToGameEntity(match.getGame()));
-    matchEntity.setUsers(match.getUsers().stream().map(this::UserModelToUserEntity).toList());
+    matchEntity.setGame(
+        entityManager.getReference(GameEntity.class, match.getGame().getId()));
+    matchEntity.setUsers(
+        match.getUsers().stream()
+            .map(u -> entityManager.getReference(UserEntity.class, u.getId()))
+            .collect(Collectors.toList()));
     return matchEntity;
   }
 
   public GameEntity gameModelToGameEntity(Game game) {
     return game.getId() != null
-        ? new GameEntity(game.getId(), game.getTitle(), game.getRules())
-        : new GameEntity(null, game.getTitle(), game.getRules());
+        ? new GameEntity(game.getId(), game.getName(), game.getRules())
+        : new GameEntity(null, game.getName(), game.getRules());
   }
 
   public Game gameEntityToGameModel(GameEntity gameEntity) {
@@ -99,7 +99,7 @@ public class EntityMapper {
 
   public GameEntity gameModelToExitstingGameEntity(Game game, GameEntity gameEntity) {
     gameEntity.setRules(game.getRules());
-    gameEntity.setName(game.getTitle());
+    gameEntity.setName(game.getName());
     return gameEntity;
   }
 
